--- a/src/app/components/mensalist/mensalist.component.scss
+++ b/src/app/components/mensalist/mensalist.component.scss
@@ -1,3 +1,10 @@
 table {
-    width: 100%;
-  }
+  width:100%;
+}
+
+.mat-form-field{
+  font-size: 14px;
+  width: 80%;
+  margin: 0 10% 0 10%;
+}
+
